# PrisonersDilemma

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  __init__.py  axelrod_adapter.py  core.py  paired_population_prisoners_dilemma_env.py  population_prisoners_dilemma_env.py  prisoners_dilemma_env.py  pyproject.toml  schedulers.py
docs/: environment_api.md  n_agent_pair_pd_design_transcript_2026-04-28.md  train_construct_method.md
tests/: test_paired_population_pd_env.py  test_population_action_coding.py  test_two_agent_action_coding.py
