[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prisoners-dilemma"
version = "0.1.0"
description = "Two-player repeated Prisoner's Dilemma environment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=0.27,<1.0",
    "numpy>=1.18.1,<2.0",
]

[tool.setuptools]
packages = ["PrisonersDilemma"]

[tool.setuptools.package-dir]
PrisonersDilemma = "."
